--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
                 <li class="links">contact</li>
                 <li class="links">gallery</li>
                 <li class="links">services</li>
+                <li class="links">about2</li>
+                <li class="links">about3</li>
            
         </div>
         <div class="icons">
